--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
     env:
       LOCALSTACK_HOST: localstack
       LOCALSTACK_PORT: 4566
+      AWS_REGION: us-east-1
     services:
       localstack:
         image: localstack/localstack
