--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
     env:
       LOCALSTACK_HOST: localstack
       LOCALSTACK_PORT: 4566
+      SERVICES: dynamodb,s3
       AWS_ACCESS_KEY_ID: unknown
       AWS_SECRET_ACCESS_KEY: unknown
       AWS_REGION: us-east-1
